# hbase-php-extension

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  demo.php  main.cpp  phphbase.ini  start-hbase.sh
include/HbaseExtension/: Client.h  Config.h  ParametersChecker.h  ResultConverter.h  Scan.h  Scanner.h
php-conf/php.d/: 20-thrift_protocol.ini  40-psr.ini  40-rdkafka.ini  40-xhprof.ini  50-phalcon.ini  z-ivinco.ini
src/HbaseExtension/: Client.cpp  Config.cpp  ParametersChecker.cpp  ResultConverter.cpp  Scan.cpp  Scanner.cpp
